src/objects/Other_Assistance_Line_Item__c.object
<CustomObject>
    <description>Line items to the Other Assistance reports, generated on the Other Assistance Object</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Housing Assistance and Other Assistance -Amount received / Amount paid for other assistance</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Housing Assistance and Other Assistance</description>
        <inlineHelpText>e.g. Yes / No</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Housing Assistance and Other Assistance</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Assistance__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Housing Assistance</fullName>
                </value>
                <value>
                    <fullName>Replacement Housing</fullName>
                </value>
                <value>
                    <fullName>Personal Property</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Type__c</fullName>
        <description>Housing Assistance and Other Assistance</description>
        <inlineHelpText>e.g. AUTO / MANUAL</inlineHelpText>
        <label>Decision Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of assistance </description>
        <inlineHelpText>e.g. EPP - Eligible - PP, NO FLOOD INSURANCE REQUIRED or ERPL - Eligible Replacement Housing</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Assistance_Agency_Name__c</fullName>
        <description>Any other Disaster Assistance Received by the applicant while filling up the loan application</description>
        <label>Other Assistance Agency Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FEMA</fullName>
                </value>
                <value>
                    <fullName>STATE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Assistance_Report__c</fullName>
        <description>Links the line item record with the Parent Other Assistance report</description>
        <label>Other Assistance Report</label>
        <referenceTo>Other_Assistance__c</referenceTo>
        <relationshipLabel>Other Assistance Line Item</relationshipLabel>
        <relationshipName>Other_Assistance_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Repay_FEMA__c</fullName>
        <label>Repay FEMA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>e.g. Initial , Appeal, Recertification, FEMA Review </inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Recertification</fullName>
                </value>
                <value>
                    <fullName>FEMA Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Assistance__c</fullName>
        <label>Type of Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Housing Assistance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Replacement Housing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Other Assistance Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Other Assistance Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Assistance Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>